--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-doc_teco
-MosaicProjects\SalamHouse\SALAMHOUSE.PLC
-MosaicProjects\SalamHouse\WebMaker\SalamHouse.xml
-MosaicProjects\SalamHouse\WebMaker\SalamHouse.xml.bak
-MosaicProjects\SalamHouse\WebMaker\SalamHouse.xml.bak.big
+/doc_teco/*
+/MosaicProjects/SalamHouse/SALAMHOUSE.PLC
+/MosaicProjects/SalamHouse/WebMaker/SalamHouse.xml
+/MosaicProjects/SalamHouse/WebMaker/SalamHouse.xml.bak
+/MosaicProjects/SalamHouse/WebMaker/SalamHouse.xml.bak.big
