- removed generated binary files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /doc_teco/*
 /MosaicProjects/SalamHouse/SALAMHOUSE.PLC
 /MosaicProjects/SalamHouse/SALAMHOUSE.DSK
+/MosaicProjects/SalamHouse/SALAMHOUSE.pch
+/MosaicProjects/SalamHouse/SALAMHOUSE.prg
 /MosaicProjects/SalamHouse/WebMaker/SalamHouse.xml
 /MosaicProjects/SalamHouse/WebMaker/SalamHouse.xml.bak
 /MosaicProjects/SalamHouse/WebMaker/SalamHouse.xml.bak.big
+
